<resources>
    <string name="app_name">EDDi</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="Startseite">startseite</string>
    <string name="Kalender">kalender</string>
    <string name="Statistik">statistik</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="stuhl">Stuhl</string>
    <string name="essen">Essen</string>
    <string name="logbuch_essen">Logbuch Essen</string>
    <string name="logbuch_stuhl">Logbuch Stuhl</string>
    <string name="frage_schmerz">Wie geht es dir heute?</string>
    <string name="logbuch_stuhl_ansicht">Logbuch Stuhl Ansicht</string>
    <string name="logbuch_essen_ansicht">Logbuch Essen Ansicht</string>
    <string name="sehr_gut">sehr_gut</string>
    <string name="gut">gut</string>
    <string name="mittel">mittel</string>
    <string name="schlecht">schlecht</string>
    <string name="sehr_schlecht">sehr_schlecht</string>
    <string name="eintraege_des_tages">Einträge des Tages:</string>
    <string name="eintraege_vom_tag">Einträge vom Tag</string>
    <string name="title_activity_anmeldung">Anmeldung</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nutzerprofil_anmeldung">Nutzerprofil</string>
    <string name="_01_01_2000">01.01.2000</string>
    <string name="musterfrau">Musterfrau</string>
    <string name="maxima">Maxima</string>
    <string name="nachname_anmeldung">Nachname:</string>
    <string name="geburtsdatum_anmeldung">Geburtsdatum:</string>
    <string name="groesse_cm">Größe (cm)</string>
    <string name="gewicht_kg">Gewicht (kg)</string>
    <string name="nutzername">Nutzername:</string>
    <string name="pin_4_stellig">PIN (4-stellig)</string>
    <string name="speichern_anmeldung">SPEICHERN</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="eintrag_stuhl">Eintrag Stuhl</string>
    <string name="bristol_stuhlformen_skala">Bristol-Stuhlformen-Skala</string>
    <string name="blut">Blut</string>
    <string name="schmerzen">Schmerzen</string>
    <string name="unverdaute_nahrung">Unverdaute Nahrung</string>
    <string name="notizen">Notizen</string>
    <string name="spuelen">Spülen</string>
    <string name="eintrag_essen">Eintrag Essen</string>
    <string name="was_hast_du_heute_gegessen">Was hast du heute gegessen?</string>
    <string name="speichern">Speichern</string>
    <string name="login">Login</string>
    <string name="nutzername_login">Nutzername</string>
    <string name="pin">PIN</string>
    <string name="anmelden">Anmelden</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="nutzerprofil">Nutzerprofil</string>
    <string name="vorname">Vorname</string>
    <string name="nachname">Nachname</string>
    <string name="vname">vname</string>
    <string name="nname">nname</string>
    <string name="geburtsdatum">Geburtsdatum</string>
    <string name="gebdat">gebDat</string>
    <string name="groesse">Größe</string>
    <string name="groesse_hint">groesse</string>
    <string name="gewicht">Gewicht</string>
    <string name="gewicht_hint">gewicht</string>
    <string name="nutzername_einstellunge">Nutzername</string>
    <string name="nutzername_hint">nutzername</string>
    <string name="pin_einstellungen">PIN</string>
    <string name="pin_hint">****</string>
    <string name="informationen">Informationen</string>
    <string name="verantwortliche">Verantwortliche: Kathi und Lisa :)</string>
    <string name="vorname_anmeldung">Vorname:</string>
    <string name="profil_anlegen">Profil anlegen:</string>
    <string name="hint_60_5">60,5</string>
    <string name="hint_165">165</string>
    <string name="benutzername">Benutzername</string>
    <string name="farbe">Farbe</string>
    <string name="schleim">Schleim</string>
    <string name="menge">Menge</string>
    <string name="registrieren">Registrieren</string>
    <string name="aenderungen_speichern">Änderungen speichern</string>
    <string name="pin_wiederholen">PIN wiederholen</string>
    <string name="pin_alt">PIN alt</string>
    <string name="pin_neu">PIN neu</string>
    <string name="title">Title</string>
    <string name="bristolimg">bristolImg</string>
    <string name="hh_mm">HH:MM</string>
</resources>