<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.Startseite_Fragment" >

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:baselineAligned="false">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/stuhl_button"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/stuhl" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/essen_button"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/essen" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewFrage"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/frage_schmerz"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_below="@id/linear1" />

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:layout_below="@id/textViewFrage">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/VAS_0"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/sehr_gut"
            android:src="@drawable/vas_0"
            android:clickable="true"/>

        <ImageView
            android:id="@+id/VAS_1"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/gut"
            android:src="@drawable/vas_1" />

        <ImageView
            android:id="@+id/VAS_2"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/mittel"
            android:src="@drawable/vas_2"
            android:clickable="true"/>

        <ImageView
            android:id="@+id/VAS_3"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/schlecht"
            android:src="@drawable/vas_3"
            android:clickable="true"/>

        <ImageView
            android:id="@+id/VAS_4"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/sehr_schlecht"
            android:src="@drawable/vas_4"
            android:clickable="true"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/linear2"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textviewStuhl"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/logbuch_stuhl"
            android:background="@color/cardview_shadow_end_color"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textViewEssen"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/logbuch_essen"
            android:background="@color/cardview_shadow_end_color"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear4"
        android:layout_width="match_parent"
        android:layout_height="369dp"
        android:layout_below="@id/linear3"
        android:orientation="horizontal"
        android:baselineAligned="false">


        <ScrollView
            android:id="@+id/scrollStuhl"
            android:layout_width="219dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

                <TextView
                    android:id="@+id/logbuchStuhl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/logbuch_stuhl_ansicht"
                    />
        </ScrollView>

        <ScrollView
            android:id="@+id/scrollEssen"
            android:layout_width="197dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

                <TextView
                    android:id="@+id/logbuchEssen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/logbuch_essen_ansicht" />

        </ScrollView>
    </LinearLayout>
</RelativeLayout>