<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="100dp"
        android:padding="4dp"
        android:textAlignment="center"
        android:background="@drawable/title_style"/>

    <TextView
        android:id="@+id/TextView_login_nutzername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nutzername_login"
        android:textSize="20sp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="60dp" />

    <EditText
        android:id="@+id/editText_nutzername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="40dp"
        android:layout_marginHorizontal="60dp" />

    <TextView
        android:id="@+id/textView_login_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pin"
        android:textSize="20sp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="60dp" />

    <EditText
        android:id="@+id/editText_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="40dp"
        android:layout_marginHorizontal="60dp" />

    <ImageButton
        android:id="@+id/button_login_fingerprint"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="150dp"
        android:layout_marginVertical="10dp"
        android:background="@android:color/transparent"
        android:src="@drawable/fingerprint" />

    <Button
        android:id="@+id/button_login_anmelden"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anmelden"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginVertical="40dp"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/button_style"/>

    <Button
        android:id="@+id/button_registrieren"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/button_style"
        android:text="@string/registrieren"
        android:textColor="@color/white"
        android:textSize="20sp" />





</LinearLayout>