<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <ImageView
            android:id="@+id/bristol_symbol"
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:text="@string/bristolimg" />

        <TextView
            android:id="@+id/textview_datum_noteStuhl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:maxLines="1"
            android:text="@string/_01_01_2001"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/black">

        </TextView>


        <TextView
            android:id="@+id/textview_uhrzeit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/textview_datum_noteStuhl"
            android:layout_marginStart="2dp"
            android:maxLines="1"
            android:text="@string/hh_mm"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/black">
        </TextView>

        <TextView
            android:id="@+id/stuhl_schmerz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/stuhl_farbe"
            android:layout_alignStart="@id/stuhl_farbe"
            android:layout_marginTop="3dp"
            android:maxLines="1"
            android:text="@string/schmerzen"
            android:textSize="12sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/stuhl_farbe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview_uhrzeit"
            android:layout_marginTop="3dp"
            android:maxLines="1"
            android:text="@string/farbe"
            android:textSize="12sp"
            android:textColor="@color/black"/>
    </RelativeLayout>


</androidx.cardview.widget.CardView>