<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Eintrag_Essen"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView_eintrag_essen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eintrag_essen"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:padding="4dp"
        android:textAlignment="center"
        android:background="@drawable/title_style"/>

    <TextView
        android:id="@+id/textView_was_hast_du_gegessen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/was_hast_du_heute_gegessen"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"/>

    <EditText
        android:id="@+id/editText_eintrag_essen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="20dp"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLength="2000"
        android:maxLines="8"/>

    <Button
        android:id="@+id/button_essen_speichern"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/speichern"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/button_style"/>

</LinearLayout>